--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
   datasource:
-    url: jdbc:sqlite:database.sqlite
-    driver-class-name: org.sqlite.JDBC
+    type: com.zaxxer.hikari.HikariDataSource
+  hikari:
+    auto-commit: false
+    maximum-pool-size: 10
+
+
+  flyway:
+    url: ${SPRING_DATASOURCE_URL}
+    user: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    locations: classpath:db/migration
